--- a/src/main/java/MainFrame.form
+++ b/src/main/java/MainFrame.form
@@ -158,7 +158,6 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Space Checker"/>
-            <Property name="actionCommand" type="java.lang.String" value="Space Checker"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SpaceCheckerButtonActionPerformed"/>
@@ -331,7 +330,7 @@
         <Container class="javax.swing.JPanel" name="ManualPanel">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="ff" red="ff" type="rgb"/>
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
           </Properties>
           <Constraints>
